<resources>
    <string name="action_settings">Settings</string>
    <string name="action_cat_male">Кот</string>
    <string name="action_cat_female">Кошка</string>
    <string name="action_kitten">Котенок</string>

    <string name="app_name">hiddensApp</string>
    <string name="textMain">Это приложениe постоянно обновляется и создано оно для практики <b>Сергея</b> в разработке
        Android.
    </string>
    <string name="buttonMain">Увидеть все</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="registerButton">Зарегестрироваться</string>
    <string name="givePresentButton">Передать</string>
    <string name="buttonProjectsAll">Все проекты</string>
    <string name="buttonListLight">Светофор</string>
    <string name="sherlockChooseButton">Помочь Шерлоку!</string>
    <string name="buttonabout">О программе</string>
    <string name="buttonListToast">Тостер</string>
    <string name="buttonListMenu">Меню</string>
    <string name="buttonMenuText">Показать меню</string>
    <string name="textViewMenu">Еще меню!</string>

    <string name="text_above">
        У лукоморья дуб ученый;\n
        Златая цепь на дубе том:\n
        И днем, и утром <b>кот Зеленый</b>\n
        Все ходит по цепи кругом;\n
        Идет <b>налево</b> - песнь заводит,\n
        <b>Направо</b> - сказку говорит.
    </string>

    <string name="about_title">О программе</string>
    <string name="present_title">Передача подарка</string>
    <string name="gotPresent_title">Подарок передан</string>
    <string name="all_title">All</string>
    <string name="projects_title">All projects</string>
    <string name="list_title">Список проектов</string>
    <string name="light_title">Светофор</string>
    <string name="register_title">Регистрация</string>
    <string name="sherlockstart_title">Шерлок</string>
    <string name="sherlockfinal_title">Кто украл?</string>
    <string name="toastTitle">Корми кота быстро!</string>
    <string name="menu_title">Тестирование меню</string>

    <string name="toWhom">Кому</string>
    <string name="toDescription">Описание</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="who">Мне нужно Имя!!!</string>
    <string name="chooseName">Выберите имя</string>
    <string name="catFood">Да покормите уже кота наконец!!!</string>

    <string name="sherlockVasya">Вася</string>
    <string name="sherlockPetya">Петя</string>
    <string name="sherlockFedya">Федя</string>
    <string name="sherlockBubenchick">Бубенчик!</string>



</resources>
