<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings_main"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
            android:id="@+id/action_male_main"
            android:orderInCategory="100"
            android:title="@string/action_cat_male"
            android:onClick="onMaimMenuClick"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_female_main"
            android:orderInCategory="100"
            android:title="@string/action_cat_female"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_kitten_main"
            android:orderInCategory="100"
            android:title="@string/action_kitten"
            app:showAsAction="never"/>


</menu>