<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/LinearLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <Button
            android:text="@string/buttonListLight"
            style="@style/buttonListStyle"
            android:id="@+id/buttonListLight"
            android:onClick="onListButtonClick"/>

    <Button
            android:text="@string/register_title"
            style="@style/buttonListStyle"
            android:id="@+id/buttonListRegister"
            android:onClick="onRegisterButtonClick"
            android:layout_below="@+id/buttonListLight"
            android:layout_alignParentStart="true"/>
    <Button
            android:text="@string/sherlockstart_title"
            style="@style/buttonListStyle"
            android:id="@+id/buttonListSherlock"
            android:onClick="onSherlockButtonClick"
            android:layout_below="@+id/buttonListRegister"
            android:layout_alignParentStart="true"/>
    <Button
            style="@style/buttonListStyle"
            android:text="@string/buttonListToast"
            android:onClick="onToastButtonClick"
            android:layout_below="@id/buttonListSherlock"
            android:layout_alignParentStart="true"/>

</RelativeLayout>
