<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLogin"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login"
            android:layout_below="@+id/textViewLogin"
            android:layout_alignParentStart="true"/>
    <TextView
            android:text="@string/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPass"
            android:layout_below="@+id/login"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/textViewPass"
            android:layout_alignParentStart="true"/>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGivePresent"
            android:text="@string/registerButton"
            android:onClick="onGivePresentClickButton"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"/>

</RelativeLayout>