<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
                android:id="@+id/relativeLayout"
              android:layout_height="match_parent">


    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRed"
            android:onClick="onRedButtonClick"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/buttonYellow"
            android:layout_marginTop="36dp"/>

    <Button
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonYellow"
            android:onClick="onYellowButtonClick"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/buttonRed"
            android:layout_alignStart="@+id/buttonGreen"/>

    <Button
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGreen"
            android:onClick="onGreenButtonClick"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/buttonYellow"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:id="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>

</RelativeLayout>
